# binance-trading-system

./: .env.backup.testnet  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MARGIN_FIX_SUMMARY.md  QUANT_SYSTEM_ARCHITECTURE.md  README.md  ai-quant.txt  analyze.py  analyze_simulation.py  analyze_training_data.py  async_pro_state.json  auto_generate_data.py  auto_strategy_demo.py  auto_strategy_demo_simple.py  autodl_start.sh  autodl_start_rtx3090.sh  backtest_from_db.py  binance-api-links.json  champion_backtest_live.py  check_api_status.py  check_futures_account.py  check_mainnet.py  check_mainnet_account.py  check_margin_account.py  clash-config-with-binance.yaml  complete_qwen3_download.py  conftest.py  create-db.js  daily_check.py  data_cleaning.py  database-config.example.json  database.js  debug_websocket.js  deep_optimizer.py  demo_ai_trading.py  demo_core_clients.js  demo_core_clients_simple.js  demo_data_generator.py  (+148 more)
BinanceChanQuant/: .env  .env.example  1  CLAUDE.md  Dtempcp.txt  cp.txt  dependency-reduced-pom.xml  optimization-notes.md  pom.xml  run_hft.bat  trading_system_log.txt
ai_trading/: __init__.py  ai_trading_system.py  market_analyzer.py  strategy_matcher.py
backtest/: README.md  __init__.py  engine.py  metrics.py
config/: __init__.py  api_config.js  api_config.py  atomic_updater.py  (+4 more)
new/rust_execution/: .gitignore  Cargo.toml  README.md  build.rs
new/rust_execution/examples/: bench_throughput.rs  demo_basic.rs
new/rust_execution/python/: demo_rust_engine.py  setup.py
new/rust_execution/python/rust_execution/: __init__.py
new/rust_execution/src/: engine.rs  error.rs  ffi.rs  ipc.rs  lib.rs  main.rs  matcher.rs  order_book.rs  ring_buffer.rs  types.rs
rust_execution/: Cargo.toml  README.md  benchmark.py  benchmark_concurrent.py  benchmark_realistic.py  test_dll.py
rust_execution/.cargo/: config.toml
rust_execution/src/: engine.rs  lib.rs  types.rs
(+1250 files in other folders)
