[package]
name = "binance_execution"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]

[lib]
name = "binance_execution"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
