[package]
name = "rust_execution"
version = "0.1.0"
edition = "2021"
authors = ["Binance Trading System"]
description = "High-performance Rust execution engine for HFT"

[lib]
name = "rust_execution"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust_engine"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"

# Concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI (optional)
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
libc = "0.2"

# Memory
memmap2 = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["python"]
python = ["pyo3"]
standalone = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
